src/test/declaraciones_asignaciones/error_const_sin_init.cps
// ❌ Debe fallar: las constantes requieren inicialización en la declaración.
const PI: integer; // error: constante sin '= <expresión>'
